--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Justine's homepage
+title: Justine's homepages
 description: Bookmark this to keep an eye on my project updates!
